test/errors/resolution/throwNoTryStrict.1.good
throwNoTryStrict.chpl:7: error: call to throwing function 'canThrow'  must be marked with try or try! (strict mode)
throwNoTryStrict.chpl:2: In module 'M':
throwNoTryStrict.chpl:3: note: The function was declared to throw here
